--- a/recipe-app/src/pages/auth/register.css
+++ b/recipe-app/src/pages/auth/register.css
@@ -1,7 +1,7 @@
 *{
     box-sizing: border-box;
     margin: 0;
-    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Helvetica,ヒラギノ角ゴ Pro W3,Hiragino Kaku Gothic Pro,メイリオ,Meiryo,ＭＳ Ｐゴシック,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+    font-family: Roboto, Helvetica, sans-serif;
     color: #211922;
     font-size: 12px;
 }
@@ -24,12 +24,11 @@
 }
 
 .register__container--title p{
-    width: 270px;
     text-align: center;
     color: rgb(51, 51, 51);
     font-size: 16px;
     font-weight: normal;
-    margin: -15px 0px 32px;
+    margin: 5px 0px 32px;
 }
 
 .register__container--title h3{
@@ -52,4 +51,56 @@
     min-height: initial;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 2px 10px;
     padding-bottom: 55px;
+}
+
+.register__form
+{
+    margin: 0px auto;
+    width: 268px;
+}
+
+ input
+{
+    margin-bottom: 7px;
+    min-height: 48px;
+    width: 100%;
+    background-color:rgb(255, 255, 255);
+    border: 2px solid rgb(136, 131, 131);
+    border-radius: 16px;
+    padding: 8px 16px;
+    outline: none;
+    font-size: 16px;
+}
+
+.register__signInButton
+{
+    border: 0px none;
+    height: 40px;
+    display: inline-block;
+    border-radius: 20px;
+    -moz-osx-font-smoothing: grayscale;
+    padding: 0px 18px;
+    font-size: 15px;
+    font-weight: bold;
+    outline: currentcolor none medium;
+    box-shadow: none;
+    cursor: pointer;
+    margin-top: 10px;
+    vertical-align: middle;
+    text-align: center;
+    background-color: rgb(230, 0, 35);
+    color: rgb(255, 255, 255);
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.register__options{
+
+    margin-bottom: 16px;
+    margin-top: 16px;
+    overflow: hidden;
+    text-align: center;
+    font-size: 14px;
+    color: rgb(51, 51, 51);
+    font-weight: bold;
 }
